update jobs css to fix links spacing

--- a/jobs.css
+++ b/jobs.css
@@ -8,6 +8,7 @@ ul {
 
 a {
   color: #c8102e;
+  display: inline;
 }
 
 .primary-text {
